# iHero

./: README.md  manage.py  pyproject.toml
ihero/: .env_example  asgi.py  settings.py  urls.py  wsgi.py
notifications/: admin.py  forms.py  models.py  views.py
notifications/migrations/: 0001_initial.py  0002_auto_20210713_1245.py
static/: style.css
static/css/: style.css
static/media/: billyBobs.jpg:Zone.Identifier  hero.jpg:Zone.Identifier
tasks/: forms.py  models.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_assigned_to.py
templates/: 404.html  500.html  base.html  coach_details.html  coaches.html  deleteme.html  generic_form.html  home.html  learner_details.html  learners.html  message_details.html  messages.html  notifications.html  powerbar.html  style.css  task.html  welcome.html
user_app/: admin.py  forms.py  models.py  views.py
user_app/management/commands/: populate.py
user_app/migrations/: 0001_initial.py  0002_alter_herouser_interests.py
