[tool.poetry]
name = "ihero"
version = "0.1.0"
description = "The Life Matrix"
authors = ["moelogins <moelogins@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
python-dotenv = "^0.18.0"
django-crispy-forms = "^1.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
